--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   <section id="contact" class="section footer">
     <div class="container">
       <h2>Contact Me</h2>
-      <p>Email: <a href="mailto:ayushman@example.com">ayushman@example.com</a></p>
+      <p>Email: <a href="mailto:ayushmanrana17@gmail.com">ayushmanrana17@gmail.com</a></p>
       <p>GitHub: <a href="https://github.com/Ayushmanrana25" target="_blank">@Ayushmanrana25</a></p>
       <p>© 2025 Ayushman Rana</p>
     </div>
